--- a/user-wallet-statements-generator-subgraph/subgraph.yaml
+++ b/user-wallet-statements-generator-subgraph/subgraph.yaml
@@ -16,14 +16,14 @@ dataSources:
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - AdminChanged
-        - Upgraded
+        - Token
+        - Owner
+        - Contract
+        - Transfer
       abis:
         - name: USDC
           file: ./abis/USDC.json
       eventHandlers:
-        - event: AdminChanged(address,address)
-          handler: handleAdminChanged
-        - event: Upgraded(address)
-          handler: handleUpgraded
-      file: ./src/usdc.ts
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/mapping.ts
