--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^20.12.11",
-    "ts-node": "^10.9.2",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
@@ -46,16 +45,20 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "turbo": "^1.12.4",
     "typedoc": "^0.27.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@coinbase/cdp-agentkit-core": "^0.0.5",
-    "@coinbase/cdp-langchain": "^0.0.7",
+    "@coinbase/agentkit": "^0.1.0",
+    "@coinbase/agentkit-langchain": "^0.1.0",
+    "@coinbase/cdp-agentkit-core": "^0.0.7",
+    "@coinbase/cdp-langchain": "^0.0.8",
     "@langchain/core": "^0.3.20",
     "@langchain/langgraph": "^0.2.24",
     "@langchain/openai": "^0.3.14",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "langchain-xai": "^0.2.2"
   }
 }
