Assistant checkpoint: Added transaction history reporting functionality
Assistant generated file changes:
- services/transactionHistory.ts: Add transaction history service
- chatbot.ts: Add transaction history commands

---

User prompt:

create an AI Agent which fetches all the transaction history of the user wallet address on a chain with requested statement duration and organize those in a pdf file and lets the user to download or share it on any provided email address for tax calculation purpose

--- a/package.json
+++ b/package.json
@@ -58,7 +58,12 @@
     "@langchain/core": "^0.3.20",
     "@langchain/langgraph": "^0.2.24",
     "@langchain/openai": "^0.3.14",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.9",
     "dotenv": "^16.4.7",
-    "langchain-xai": "^0.2.2"
+    "langchain-xai": "^0.2.2",
+    "nodemailer": "^6.10.0",
+    "pdfkit": "^0.16.0",
+    "web3": "^4.16.0"
   }
 }
