--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "langchain-xai": "^0.2.2",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "zod": "^3.24.1"
   }
 }
