--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@coinbase/cdp-langchain": "^0.0.8",
     "@google/generative-ai": "^0.21.0",
     "@langchain/core": "^0.3.20",
+    "@langchain/google-genai": "^0.1.8",
     "@langchain/langgraph": "^0.2.24",
     "@langchain/openai": "^0.3.14",
     "@types/nodemailer": "^6.4.17",
