--- a/user-wallet-statements-generator-subgraph/package.json
+++ b/user-wallet-statements-generator-subgraph/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.95.0",
-    "@graphprotocol/graph-ts": "0.36.0"
+    "@graphprotocol/graph-ts": "0.36.0",
+    "ethers": "^6.13.5"
   },
-  "devDependencies": { "matchstick-as": "0.6.0" }
+  "devDependencies": {
+    "matchstick-as": "0.6.0"
+  }
 }
