--- a/user-wallet-statements-generator-subgraph/subgraph.yaml
+++ b/user-wallet-statements-generator-subgraph/subgraph.yaml
@@ -5,11 +5,11 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
-    name: USDC
+    name: ERC20
     network: arbitrum-sepolia
     source:
       address: "0x4Db297388AD5a0AB6ECEe761021E0C1c14fc49E5"
-      abi: USDC
+      abi: ERC20
       startBlock: 106029426
     mapping:
       kind: ethereum/events
@@ -17,12 +17,10 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Token
-        - Owner
-        - Contract
         - Transfer
       abis:
-        - name: USDC
-          file: ./abis/USDC.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
